refactor: use configuration for wodt digital adapter